# Template-Renderer

./: CMakeLists.txt  README.md
include/: cuda_array.cuh  defines.h  utils.cuh
libs/: CMakeLists.txt
src/: main.cu  uitls.cu
